--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-# Database
-DATABASE_URL="file:./dev.db"
+# DATABASE_URL="file:./temp_backup.db"
+# DATABASE_URL="file:./dev.db"
+DATABASE_URL='postgresql://neondb_owner:npg_Zwft1SOLCg2B@ep-restless-lake-ahetnrw5-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # NextAuth
 NEXTAUTH_SECRET="your-secret-key-here-change-in-production"
