--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # DATABASE_URL="file:./temp_backup.db"
 # DATABASE_URL="file:./dev.db"
-DATABASE_URL='postgresql://neondb_owner:npg_Zwft1SOLCg2B@ep-restless-lake-ahetnrw5-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+# DATABASE_URL='postgresql://neondb_owner:npg_Zwft1SOLCg2B@ep-restless-lake-ahetnrw5-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+# DATABASE_URL='postgresql://neondb_owner:npg_Zwft1SOLCg2B@ep-restless-lake-ahetnrw5-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL="postgresql://neondb_owner:npg_Zwft1SOLCg2B@ep-restless-lake-ahetnrw5-pooler.c-3.us-east-1.aws.neon.tech:5432/neondb?sslmode=require&pgbouncer=true&connection_limit=1"
 
 # NextAuth
 NEXTAUTH_SECRET="your-secret-key-here-change-in-production"
