--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"@radix-ui/react-select": "2.1.4",
 		"@radix-ui/react-separator": "1.1.1",
 		"@radix-ui/react-slider": "1.2.2",
-		"@radix-ui/react-slot": "1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-switch": "1.1.2",
 		"@radix-ui/react-tabs": "1.1.2",
 		"@radix-ui/react-toast": "^1.2.15",
@@ -69,7 +69,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.66.0",
 		"react-masonry-css": "^1.0.16",
-		"tailwind-merge": "^3.3.1",
+		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.16",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.9.3",
