--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.66.0",
 		"react-masonry-css": "^1.0.16",
+		"react-quill": "^2.0.0",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.16",
 		"tailwindcss-animate": "^1.0.7",
